common/src/main/resources/less/style.less
@import "suithemes/default/globals/site.variables";
@import "~theme/modules/sidebar.variables";

// vertical buttons
@import "verticalbuttons.less";
@import "vendor/react-resizable.less";
@import "vendor/react-grid-layout.less";

@import "explore-grid.less";

@gridSpace: 5px;
@minHeight: 2.85714286em; // TODO: Calculate this on less
@resizeHandleWidth: 5px; // Width of the tree resize handle
@tileBackground: black;

html,
body {
  box-sizing: border-box;
  height: 100%;
  padding: 0px;
  margin: 0px;
}

// Mixins
//
.full-height-width {
  height: 100%;
  width: 100%;
}

// Classes
.tilemenu {
  background: darkgray;
}

// Main grid
.main-grid {
  display: grid;
  height: 100vh;
  grid-template-columns: 50px auto;
  grid-template-rows: 42px auto;
  grid-template-areas:
    "header header"
    "sidebar body";
}

.main-body {
  grid-area: body;
}

.main-title {
  text-transform: uppercase;
  letter-spacing: 0.4em;
}

.main-header {
  grid-area: header;
}

.sidetabs {
  grid-area: sidebar;
  background: darkgrey;
}

.explore-tile-title {
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-bottom-color: fade(@borderColor, 100%);
}

.explore-tile-body {
  height: ~"calc(100% - @{minHeight}/2)";
}

.explore-tile {
  .full-height-width();
  background: @tileBackground;
}

.proposal-tile {
  margin: 0.5em;
}

.proposal-tile .explore-tile-body {
  padding: 1em;
}

.react-aladin {
  margin: 2px;
}

// Side tabs
.sidetabs-body {
  height: 100%;
}

.horizontal-vertical-center {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
}

// Vertical handle to resize the tree
.resize-handle {
  width: @resizeHandleWidth;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  user-select: none;
  cursor: ew-resize;
  position: relative;
  margin-left: -@resizeHandleWidth;
  background: black;
  z-index: 1;
}

.maingrid {
  height: 100%;
}

// Area where the grid-layout is placed
.rgl-area,
.tree-rgl {
  .full-height-width();
}

// Section on the left to place the tree
.tree {
  margin-right: @resizeHandleWidth;
  height: 100%;
  left: 0px;
  top: 0px;
  position: absolute;

  // Special css to decorate the resize handle. It needs to be very specific
  .react-resizable-handle.react-resizable-handle-e {
    cursor: e-resize;
    background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHN0eWxlPSJiYWNrZ3JvdW5kLWNvbG9yOiNmZmZmZmYwMCIgd2lkdGg9IjYiIGhlaWdodD0iNiI+CiAgPHBhdGggZD0iTTYgNkgwVjQuMmg0LjJWMEg2djZ6IiBvcGFjaXR5PSIuMzAyIiBmaWxsPSIjZTNkZWRiIi8+Cjwvc3ZnPgo=");
  }
}

// Outor area of the body.
.tree-body-outer {
  // A bit narrower to fit the resize handle
  width: ~"calc(100% - @{resizeHandleWidth})";
  height: 100%;
  // Add scroll on Y
  overflow-y: scroll;
}

// Inner area of the tree
.tree-body-inner {
  height: 100%;
}

.rgl-body {
  height: 100%;
  position: absolute;
  top: 0px;
  overflow-y: scroll;
}

.single-panel-tile {
  margin-top: 1px;
  .full-height-width();
  position: absolute;
}

.single-panel-area {
  .full-height-width();
}

.obs-tree {
  .full-height-width();
  padding-top: 5px;
  padding-bottom: 10px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.obs-item {
  margin: 10px
}

.obs-tree-item {
  margin-left: 25px;
  padding: 5px;
}

.card.obs-badge {
  width: 100%;
}

.vertical.segment.obs-tree-group {
  padding-top: 5px;
  padding-bottom: 5px;
}

.obs-tree-group-header {
  display: flex;
  justify-content: space-between;
}

.obs-tree-buttons {
  display: flex;
  justify-content: space-between;
  padding-left: 5px;
  padding-right: 5px;
}

.dragging-over {
  background-color: gray;
}

.sky-plot {
  height: 350px;
}

.sky-plot-section {
  height: 390px;
  background-color: white;
  color: black;
}

.sky-plot-section .ui.checkbox + label {
  color: black;
}

.sky-plot-controls {
  display: flex;
  justify-content: space-around;
}

.plot-toggle {
  margin-left: 10px;
  margin-right: 10px;
  padding-top: 6px;
}

.plot-toggle.ui.slider.checkbox .box:before, .plot-toggle.ui.slider.checkbox label:before {
  background-color: #545454 !important;
}

.plot-toggle.ui.slider.checkbox input:focus:checked ~ label:before {
  background-color: #545454 !important;
}

.ui.grid >.row > .column.aladin-column {
  padding-top: 0px;
  padding-bottom: 0px;
}

.aladin-column {
}

.aladin-container-column {
  height: 100%;
  display: grid;
  grid-template-rows: 1fr min-content;
  grid-template-columns: max-content 4fr min-content;
  align-content: stretch;
  grid-template-areas: "aladin aladin aladin"
    "fov curr center";
}

.aladin-container-body {
  grid-area: aladin;
  margin-bottom: 0.2em;
}

.aladin-container-status {
}

.aladin-status-fov {
  grid-area: fov;
  justify-self: stretch;
  align-self: center;
}

.aladin-status-current-coordinates {
  grid-area: curr;
  justify-self: end;
  align-self: center;
}

.aladin-status-center-button {
  grid-area: center;
  align-self: center;
}

.aladin-detail-text {
  color: white;
}

.moon-phase {
  position: absolute;
  top: 5px;
  right: 20px;
  z-index: 10;
}

